--- a/src/styles.css
+++ b/src/styles.css
@@ -182,3 +182,9 @@ button {
     box-sizing: border-box !important;
   }
 }
+
+@media (max-width: 968px) {
+  app-admin-sidebar {
+    display: none;
+  }
+}
